2008-06-27  Alberto Garcia  <agarcia@igalia.com>

	* src/vgl-bookmark-mgr.h
	* src/vgl-bookmark-mgr.c
	(vgl_bookmark_mgr_reorder):
	New function to reorder items in the bookmark list.
	(vgl_bookmark_mgr_find_bookmark_node, vgl_bookmark_compare):
	Use g_list_find_custom() to find bookmarks.

	* src/vgl-bookmark-window.c
	(vgl_bookmark_window_init)
	(vgl_bookmark_window_finalize):	Disconnect signal handlers using
	their ID.
	(drag_end_cb): Reorder items in the bookmark manager after a drag
	and drop.

2008-06-26  Alberto Garcia  <agarcia@igalia.com>

	* src/vgl-bookmark-window.c (vgl_bookmark_window_new): Set a
	default height.

2008-06-25  Alberto Garcia  <agarcia@igalia.com>

	* src/vgl-bookmark-mgr.c (vgl_bookmark_mgr_save_to_disk): Add
	version number to the XML file.

	* src/vgl-bookmark-window.c
	(vgl_bookmark_window_show):
	Move the static bookmark_window variable to
	vgl_bookmark_window_show() and clear it using a weak pointer.
	Rename 'bookmark_window' to just 'win'
	(play_selected_row, close_button_clicked, vgl_bookmark_window_init)
	(vgl_bookmark_window_close):
	Make vgl_bookmark_window_close() receive the window to be
	destroyed instead of using the singleton.

	* configure.ac: Don't enable media player keys if there's no D-BUS
	support.

2008-06-25  Mario Sanchez Prada <msanchez@igalia.com>

	* configure.ac:
	* src/dbus.c:
	* src/dbus.h:
	Add support for the media player keys present in some keyboards
	via the Gnome Settings Daemon.

2008-06-19  Alberto Garcia  <agarcia@igalia.com>

	* Makefile.am: Install vagalumectl manpage only in the Gnome
	version

	* ChangeLog: added ChangeLog file

2008-06-18  Mario Sanchez Prada <msanchez@igalia.com>

	* Makefile.am
	* vagalume.1
	* vagalumectl.1
	Add manpage for vagalumectl

2008-06-18  Alberto Garcia <agarcia@igalia.com>

	* src/vgl-bookmark-window.c
	Make the treeview in the bookmark window reorderable

2008-06-18  Alberto Garcia <agarcia@igalia.com>

	* INSTALL
	Instructions to compile Vagalume for Moblin
